--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
@@ -45,6 +46,7 @@
     "next-pwa": "^5.6.0",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
+    "react-day-picker": "^9.11.2",
     "react-dom": "^19.0.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
