--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react": "^19.0.0",
     "react-day-picker": "^9.11.2",
     "react-dom": "^19.0.0",
+    "resend": "^6.5.2",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
     "superjson": "^2.2.1",
