--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,4 @@ BETTER_AUTH_SECRET=""
 DATABASE_URL="postgresql://postgres:password@localhost:5432/clubman"
 
 RESEND_API_KEY=""
+RESEND_EMAIL_FROM=""
