--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/clubman"
 
 RESEND_API_KEY=""
 RESEND_EMAIL_FROM=""
+
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
+
+DEBUG_EMAIL=""
