--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.2",
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -46,10 +47,12 @@
     "lucide-react": "^0.554.0",
     "next": "^15.2.3",
     "next-pwa": "^5.6.0",
+    "next-themes": "^0.4.6",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
     "react-day-picker": "^9.11.2",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.66.1",
     "resend": "^6.5.2",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
